kubernetes/defense-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: defense-system
  namespace: castuo-prod
spec:
  selector:
    app: defense-system
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
